# raytracer

./: .gitignore  CMakeLists.txt
include/: Camera.hpp  Matrix44.hpp  PerspectiveProjection.hpp  Shape.hpp  Sphere.hpp  Vec2.hpp  Vec3.hpp
src/: Camera.cpp  PerspectiveProjection.cpp  Shape.cpp  Sphere.cpp  main.cpp
